--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.application.name=demo
 
 #应用根目录
-server.context-path=/demo
-
+#server.context-path=/demo
+server.servlet.context-path=/demo
 #应用端口
 server.port=8084
 
@@ -20,8 +20,8 @@ server.tomcat.uri-encoding=utf-8
 #server.tomcat.max-threads=150
 
 #session最大超时时间（分钟），默认为30分钟
-server.session-timeout=60
-#server.servlet.session.timeout=60m
+#server.session-timeout=60
+server.servlet.session.timeout=60m
 
 #该服务绑定IP地址，启动服务器时如本机不是该IP地址则抛出异常启动失败
 #server.address=192.168.1.1
@@ -40,3 +40,6 @@ spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
+
+#如果开启，本地调式页面不会立马更新，上线再打开缓存
+spring.thymeleaf.cache=false
