--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -43,3 +43,8 @@ spring.datasource.initial-size=5
 
 #如果开启，本地调式页面不会立马更新，上线再打开缓存
 spring.thymeleaf.cache=false
+
+#让rest controller返回实体转换json的时候日期格式化输出，默认这里yyyy-MM-dd，如果特殊格式在实体字段上加入注解，如：@JsonFormat(pattern="yyyy-MM-dd HH:mm:ss",timezone = "GMT+8")
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=GMT+8
+spring.jackson.serialization.write-dates-as-timestamps=false
