--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -31,6 +31,11 @@ spring.http.encoding.force=true
 spring.http.encoding.charset=utf-8
 spring.http.encoding.enabled=true
 
+#横幅
+spring.banner.charset=UTF-8
+#资源国际化
+spring.messages.encoding=UTF-8
+
 #数据源配置 mysql8 使用com.mysql.cj.jdbc.Driver驱动，PS：serverTimezone=GMT需要加上，不然服务器时间不能同步
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mysql?serverTimezone=GMT&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
@@ -48,3 +53,13 @@ spring.thymeleaf.cache=false
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=GMT+8
 spring.jackson.serialization.write-dates-as-timestamps=false
+#application.properties是spring boot默认配置文件，内部源代码使用ISO-8859-1编码，即使更改这文件属性编码也是无效的
+#详细见：https://blog.csdn.net/formemorywithyou/article/details/96473169
+#所以如果业务配置在这，必须转成Unicode码
+#cmd切换到jdk下的bin目录，打开native2ascii.exe，然后在下面输入你的中文，回车显示Unicode码
+#整个资源文件中文切换Unicode：native2ascii -encoding utf-8 源文件名.properties 目标文件名.properties
+#所以建议application.propertis中不要配置业务配置，只配置springboot相关
+#另外，application.yml或yaml中是以utf-8格式存储的，可以获取中文
+#最终不建议业务配置在application或application-xxx或application.yml|yaml等配置中。
+#通过自定义配置文件，可以手工设置编码来读取
+demo.title=\u6d4b\u8bd5\u6d4b\u8bd5
