--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -62,4 +62,5 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 #另外，application.yml或yaml中是以utf-8格式存储的，可以获取中文
 #最终不建议业务配置在application或application-xxx或application.yml|yaml等配置中。
 #通过自定义配置文件，可以手工设置编码来读取
+#如果同时存在application.propertis和application.yml会优先读取application.propertis
 demo.title=\u6d4b\u8bd5\u6d4b\u8bd5
