--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -31,10 +31,15 @@ spring.http.encoding.force=true
 spring.http.encoding.charset=utf-8
 spring.http.encoding.enabled=true
 
-#横幅
+#控制台LOGO图案文字
 spring.banner.charset=UTF-8
 #资源国际化
 spring.messages.encoding=UTF-8
+
+#指定前端模板文件位置
+spring.mvc.view.prefix:/WEB-INF/ui/
+#指定前端模板文件后缀
+spring.mvc.view.suffix:.jsp
 
 #数据源配置 mysql8 使用com.mysql.cj.jdbc.Driver驱动，PS：serverTimezone=GMT需要加上，不然服务器时间不能同步
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -63,4 +68,4 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 #最终不建议业务配置在application或application-xxx或application.yml|yaml等配置中。
 #通过自定义配置文件，可以手工设置编码来读取
 #如果同时存在application.propertis和application.yml会优先读取application.propertis
-demo.title=\u6d4b\u8bd5\u6d4b\u8bd5
+demo.title=\u6D4B\u8BD5\u6D4B\u8BD5
