--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -37,9 +37,25 @@ spring.banner.charset=UTF-8
 spring.messages.encoding=UTF-8
 
 #指定前端模板文件位置
-spring.mvc.view.prefix:/WEB-INF/ui/
+#spring.view.prefix（springboot低版本写法）
+#spring.mvc.view.prefix:/WEB-INF/ui/
 #指定前端模板文件后缀
-spring.mvc.view.suffix:.jsp
+#spring.view.suffix（springboot低版本写法）
+#spring.mvc.view.suffix:.jsp
+
+#thymeleaf模板配置-------------------------------------------#
+#指定模板所在的目录
+spring.thymeleaf.prefix=/WEB-INF/ui/
+#检查模板路径是否存在
+spring.thymeleaf.check-template-location=true
+#如果开启，本地调式页面不会立马更新，上线再打开缓存
+spring.thymeleaf.cache=false
+#模板文件后缀
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+#thymeleaf模板配置-------------------------------------------#
 
 #数据源配置 mysql8 使用com.mysql.cj.jdbc.Driver驱动，PS：serverTimezone=GMT需要加上，不然服务器时间不能同步
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -51,8 +67,6 @@ spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
 
-#如果开启，本地调式页面不会立马更新，上线再打开缓存
-spring.thymeleaf.cache=false
 
 #让rest controller返回实体转换json的时候日期格式化输出，默认这里yyyy-MM-dd，如果特殊格式在实体字段上加入注解，如：@JsonFormat(pattern="yyyy-MM-dd HH:mm:ss",timezone = "GMT+8")
 spring.jackson.date-format=yyyy-MM-dd
