--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -38,23 +38,23 @@ spring.messages.encoding=UTF-8
 
 #指定前端模板文件位置
 #spring.view.prefix（springboot低版本写法）
-#spring.mvc.view.prefix:/WEB-INF/ui/
+spring.mvc.view.prefix:/WEB-INF/ui/
 #指定前端模板文件后缀
 #spring.view.suffix（springboot低版本写法）
-#spring.mvc.view.suffix:.jsp
+spring.mvc.view.suffix:.jsp
 
 #thymeleaf模板配置-------------------------------------------#
 #指定模板所在的目录
-spring.thymeleaf.prefix=/WEB-INF/ui/
+#spring.thymeleaf.prefix=/WEB-INF/ui/
 #检查模板路径是否存在
-spring.thymeleaf.check-template-location=true
+#spring.thymeleaf.check-template-location=true
 #如果开启，本地调式页面不会立马更新，上线再打开缓存
-spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=false
 #模板文件后缀
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML5
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.content-type=text/html
 #thymeleaf模板配置-------------------------------------------#
 
 #数据源配置 mysql8 使用com.mysql.cj.jdbc.Driver驱动，PS：serverTimezone=GMT需要加上，不然服务器时间不能同步
