spring boot jdbc

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -59,7 +59,8 @@ spring.mvc.view.suffix:.jsp
 
 #数据源配置 mysql8 使用com.mysql.cj.jdbc.Driver驱动，PS：serverTimezone=GMT需要加上，不然服务器时间不能同步
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mysql?serverTimezone=GMT&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+#新版本mysql，必须带上时区说明serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=szml
 spring.datasource.max-idle=10
