--- a/demo/src/main/resources/application-offline.properties
+++ b/demo/src/main/resources/application-offline.properties
@@ -58,15 +58,35 @@ spring.mvc.view.suffix:.jsp
 #thymeleaf模板配置-------------------------------------------#
 
 #数据源配置 mysql8 使用com.mysql.cj.jdbc.Driver驱动，PS：serverTimezone=GMT需要加上，不然服务器时间不能同步
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.test.driver-class-name=com.mysql.cj.jdbc.Driver
 #新版本mysql，必须带上时区说明serverTimezone=GMT
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=szml
-spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.min-idle=5
-spring.datasource.initial-size=5
+#GMT会少了8小时，所以这里用GMT+8，转义后：GMT%2b8
+spring.datasource.test.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2b8&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=true 
+spring.datasource.test.username=root
+spring.datasource.test.password=szml
+spring.datasource.test.max-idle=10
+spring.datasource.test.max-wait=10000
+spring.datasource.test.min-idle=5
+spring.datasource.test.initial-size=5
+
+#本地 订单数据源配置
+spring.datasource.order.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.order.jdbc-url=jdbc:mysql://localhost:3306/order?serverTimezone=GMT%2b8&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=true 
+spring.datasource.order.username=root
+spring.datasource.order.password=szml
+spring.datasource.order.max-idle=10
+spring.datasource.order.max-wait=10000
+spring.datasource.order.min-idle=5
+spring.datasource.order.initial-size=5
+#1.251 业务数据源配置
+spring.datasource.report.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.report.jdbc-url=jdbc:mysql://192.168.1.251:3306/gnota?serverTimezone=GMT%2b8&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=true 
+spring.datasource.report.username=root
+spring.datasource.report.password=12452A
+spring.datasource.report.max-idle=10
+spring.datasource.report.max-wait=10000
+spring.datasource.report.min-idle=5
+spring.datasource.report.initial-size=5
 
 
 #让rest controller返回实体转换json的时候日期格式化输出，默认这里yyyy-MM-dd，如果特殊格式在实体字段上加入注解，如：@JsonFormat(pattern="yyyy-MM-dd HH:mm:ss",timezone = "GMT+8")
