jpa多数据源练习

--- a/demo/src/main/resources/application-offline.properties
+++ b/demo/src/main/resources/application-offline.properties
@@ -61,7 +61,7 @@ spring.mvc.view.suffix:.jsp
 spring.datasource.test.driver-class-name=com.mysql.cj.jdbc.Driver
 #新版本mysql，必须带上时区说明serverTimezone=GMT
 #GMT会少了8小时，所以这里用GMT+8，转义后：GMT%2b8
-spring.datasource.test.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2b8&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=true 
+spring.datasource.test.jdbc-url=jdbc\:mysql\://localhost\:3306/test?serverTimezone\=GMT%2b8&autoReconnect\=true&useUnicode\=true&characterEncoding\=UTF-8&useSSL\=true 
 spring.datasource.test.username=root
 spring.datasource.test.password=szml
 spring.datasource.test.max-idle=10
@@ -71,7 +71,7 @@ spring.datasource.test.initial-size=5
 
 #本地 订单数据源配置
 spring.datasource.order.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.order.jdbc-url=jdbc:mysql://localhost:3306/order?serverTimezone=GMT%2b8&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=true 
+spring.datasource.order.jdbc-url=jdbc\:mysql\://localhost\:3306/order?serverTimezone\=GMT%2b8&autoReconnect\=true&useUnicode\=true&characterEncoding\=UTF-8&useSSL\=true 
 spring.datasource.order.username=root
 spring.datasource.order.password=szml
 spring.datasource.order.max-idle=10
@@ -80,7 +80,7 @@ spring.datasource.order.min-idle=5
 spring.datasource.order.initial-size=5
 #1.251 业务数据源配置
 spring.datasource.report.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.report.jdbc-url=jdbc:mysql://192.168.1.251:3306/gnota?serverTimezone=GMT%2b8&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=true 
+spring.datasource.report.jdbc-url=jdbc\:mysql\://192.168.1.251\:3306/gnota?serverTimezone\=GMT%2b8&autoReconnect\=true&useUnicode\=true&characterEncoding\=UTF-8&useSSL\=true 
 spring.datasource.report.username=root
 spring.datasource.report.password=12452A
 spring.datasource.report.max-idle=10
@@ -88,6 +88,20 @@ spring.datasource.report.max-wait=10000
 spring.datasource.report.min-idle=5
 spring.datasource.report.initial-size=5
 
+
+#SQL输出
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.hbm2ddl.auto说明
+#create：Hibernate每次删除上次生成，然后根据实体重新生成表，哪怕实体没有变化也照样执行。
+#create-drop：Hibernate每次根据实体生成表，sessionFactory关闭，表自动删除。
+#update：比较常用，先建好数据库，Hibernate第一次根据实体自动建表，后面根据实体说明结构自动更新表结构，表一直存在。PS：发布服务器后，服务器启动不会立马执行，得到app调用
+#validate：Hibernate每次验证创建数据库表结构，只会和数据库中的表进比较，不会创建新表，但是会插入新值。
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#format⼀下SQL进⾏输出
+spring.jpa.properties.hibernate.format_sql=true
+#相同bean名覆盖注册 SpringBoot 2.1之前，这个配置默认就是true，而在2.1做了更改。
+#spring.main.allow-bean-definition-overriding=true
 
 #让rest controller返回实体转换json的时候日期格式化输出，默认这里yyyy-MM-dd，如果特殊格式在实体字段上加入注解，如：@JsonFormat(pattern="yyyy-MM-dd HH:mm:ss",timezone = "GMT+8")
 spring.jackson.date-format=yyyy-MM-dd
