--- a/demo/src/main/resources/application-offline.properties
+++ b/demo/src/main/resources/application-offline.properties
@@ -103,6 +103,12 @@ spring.jpa.properties.hibernate.format_sql=true
 #相同bean名覆盖注册 SpringBoot 2.1之前，这个配置默认就是true，而在2.1做了更改。
 #spring.main.allow-bean-definition-overriding=true
 
+#以下2项
+#解决org.hibernate.LazyInitializationException: could not initialize proxy [xxx.xxx.xxx.实体#数字] - no Session的异常 
+#案例：在通过JAPReposity执行批量删除再getOne时抛出
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 #让rest controller返回实体转换json的时候日期格式化输出，默认这里yyyy-MM-dd，如果特殊格式在实体字段上加入注解，如：@JsonFormat(pattern="yyyy-MM-dd HH:mm:ss",timezone = "GMT+8")
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=GMT+8
