--- a/demo/src/main/resources/application-offline.properties
+++ b/demo/src/main/resources/application-offline.properties
@@ -43,6 +43,10 @@ spring.mvc.view.prefix:/WEB-INF/ui/
 #spring.view.suffix（springboot低版本写法）
 spring.mvc.view.suffix:.jsp
 
+#屏蔽spring security
+#貌似不起作用，后通过configuration解决，见DemoSecurityConfiguratoin
+#spring.security.basic.enabled=false
+
 #thymeleaf模板配置-------------------------------------------#
 #指定模板所在的目录
 #spring.thymeleaf.prefix=/WEB-INF/ui/
